# orogena

./: .clang-format  .clang-tidy  .clangd  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  GETTING_STARTED.md  LICENSE  README.md  SETUP.md  THIRD_PARTY_LICENSES.md  vcpkg.json
.github/: CONTRIBUTING.md  labeler.yml
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: auto-label.yml  ci.yml  release.yml
cmake/: local-hooks.cmake
docs/: 001_sdp_orogena.md  001_sdp_orogena_v2.md  001_sdp_orogena_v3.md  002_coding_standard.md  003_design_standard.md  ci_pipeline.md
docs/templates/: header_template.h  source_template.cpp
resources/: resources.qrc
scripts/: build.sh  configure.sh  create_issues.sh  new_class.sh  setup_vcpkg.sh
src/: CMakeLists.txt  main.cpp
src/core/: core_application.cpp  core_application.h  core_project.cpp  core_project.h  core_settings_interface.h
src/database/: database_interface.h  database_manager.cpp  database_manager.h  database_transaction.cpp
src/galaxy/: galaxy_cdf.cpp  galaxy_cdf.h  galaxy_model.cpp  galaxy_model.h  galaxy_types.cpp  galaxy_types.h
src/gui/: gui_main_window.cpp  gui_main_window.h  gui_qt_settings.cpp  gui_qt_settings.h
src/math/: math_constants.h  math_interpolation.cpp  math_interpolation.h  math_orbital.cpp  math_orbital.h
src/render/: render_camera.cpp  render_camera.h  render_galaxy.cpp  render_galaxy.h  render_grid.cpp  render_grid.h  render_mesh.cpp  render_mesh.h  render_shader.cpp  render_shader.h  render_spectral.cpp  render_spectral.h  render_sphere.cpp  render_sphere.h  render_star.cpp  render_star.h  render_viewport.cpp  render_viewport.h
src/render/shaders/: basic.frag  basic.vert  galaxy.frag  galaxy.vert  star.frag  star.vert
src/stellar/: stellar_star.cpp  stellar_star.h
src/utils/: utils_assert.h  utils_common.h  utils_logger.cpp  utils_logger.h  utils_types.h
tests/: CMakeLists.txt
tests/unit/core/: test_project.cpp
tests/unit/database/: test_database_manager.cpp
tests/unit/gui/: test_qt_settings.cpp
tests/unit/render/: test_shader.cpp
tests/unit/stellar/: test_star.cpp
tests/unit/utils/: test_logger.cpp
